--- a/assets/scss/common/_typography.scss
+++ b/assets/scss/common/_typography.scss
@@ -12,7 +12,7 @@ h1, h2, h3, h4, h5, h6{
 }
 
 h1{
-	font-size: 1.5em;
+	font-size: 3em;
 }
 
 h2{
